# Probabilistic-Inversion-Modeling-of-Gas-Emissions

./: README.md
Code/Chilbolton_Case_Study (Section 5 + SM.B 2)/Exploratory Data Analysis (SM.B 2.4)/: Supplementary Material B, Section  2.4, ASC Determination.ipynb
Code/Chilbolton_Case_Study (Section 5 + SM.B 2)/Inversion (Section 5 + SM.B 2.5-2.7)/: Chilbolton Source 1 inversion.ipynb  Chilbolton Source 2 inversion.ipynb  Chilbolton Source 3and4 inversion.ipynb  Chilbolton simulation inversion.ipynb  Chilbolton sources inversion results.ipynb
Code/Simulation Study (Section 4 + SM.B 1)/: Simulation Study Code.ipynb
Data/Chilbolton_data_files/Postprocessed/Sensor_reflector_locations/: Chilbolton_instruments_location.pkl
Data/Chilbolton_data_files/Postprocessed/Source_1/: Chilbolton_CH4_measurements_source_1.pkl  Chilbolton_windfield_source_1.pkl  README.txt
Data/Chilbolton_data_files/Postprocessed/Source_2/: Chilbolton_CH4_measurements_source_2.pkl  Chilbolton_windfield_source_2.pkl  README.txt
Data/Chilbolton_data_files/Postprocessed/Source_3_and_4/: Chilbolton_CH4_measurements_source_3and4.pkl  Chilbolton_windfield_source_3and4.pkl  README.txt
Data/Chilbolton_data_files/Postprocessed/Source_locations_and_emission_rates/: Chilbolton_sources_locations_and_emission_rates.pkl
Data/Chilbolton_data_files/Preprocessed/: README.txt
Sourceinversion/: README.md  pyproject.toml  requirements.txt
Sourceinversion/sourceinversion/atmospheric_measurements/: __init__.py  atmospheric_measurements.py
Sourceinversion/sourceinversion/mcmc/: __init__.py  mcmc.py
(+272 files in other folders)
